renders a no-matches message if search query has no matches, styles message, fixes nav gap and bottom of browserpage

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,5 @@
+@import '../variable.scss';
+
 .main-wrapper {
   display: flex;
 }
@@ -6,4 +8,11 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+}
+
+.no-match {
+  color: $main-color;
+  text-align: center;
+
+  margin: 20px 0 200px;
 }
