--- a/src/CardContainer/CardContainer.scss
+++ b/src/CardContainer/CardContainer.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   
-  margin: 0px auto;
+  margin: 0px auto 200px;
   width: 1166px;
 }
 
